--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
 eureka.client.serviceUrl.defaultZone  = http://localhost:8761/eureka
 eureka.client.instance.preferIpAddress = true
-spring.application.name = eurekaclient
+spring.application.name = order-service
+management.security.enabled = false
